<resources>
    <string name="app_name">FacilitaTech</string>
    <string name="sum_numbers">Sum Two Numbers</string>
    <string name="send_message">Send Message To \n Another Screen</string>
    <string name="check_acceleration">Check Acceleration</string>
    <string name="check_luminosity">Check Luminosity</string>
    <string name="touch_coordinates">Touch Coordinates</string>
    <string name="check_geoposition">Check Geoposition</string>
    <string name="title_activity_wait_page">WaitPageActivity</string>
</resources>