<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="3"
    android:orientation="vertical"
    android:alignmentMode="alignMargins"
    android:columnOrderPreserved="false"
    android:padding="30dp"
    >

    <!-- Sum -->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_columnWeight="1"
        android:layout_margin="20dp"
        >

        <ImageButton
            android:id="@+id/btnSumNumbers"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/sum_icon"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sum_numbers"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="100dp"
            />

    </FrameLayout>

    <!-- Send Message -->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_columnWeight="1"
        android:layout_margin="20dp"
        >

        <ImageButton
            android:id="@+id/btnSendMessage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/send_message_icon"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_message"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="100dp"
            />
    </FrameLayout>

    <!-- Check Acceleration -->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_columnWeight="1"
        android:layout_margin="20dp"
        >

        <ImageButton
            android:id="@+id/btnCheckAcceleration"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/acceleration_icon"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_acceleration"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="100dp"
            />
    </FrameLayout>

    <!-- Check Luminosity -->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_columnWeight="1"
        android:layout_margin="20dp"
        >

        <ImageButton
            android:id="@+id/btnCheckLuminosity"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/luminosity_icon"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_luminosity"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="100dp"
            />
    </FrameLayout>

    <!-- Touch Coordinates -->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_columnWeight="1"
        android:layout_margin="20dp"
        >

        <ImageButton
            android:id="@+id/btnCheckTemperature"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/touch_icon"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/touch_coordinates"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="100dp"
            />
    </FrameLayout>

    <!-- Check GeoPosition -->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_columnWeight="1"
        android:layout_margin="20dp"
        >

        <ImageButton
            android:id="@+id/btnCheckGeoPosition"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/geoposition_icon"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_geoposition"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="100dp"
            />
    </FrameLayout>

</GridLayout>